fix: remove scrollbar when it is not necessary

--- a/frontend/src/components/SignUp/Register/Register.module.scss
+++ b/frontend/src/components/SignUp/Register/Register.module.scss
@@ -1,7 +1,7 @@
 .registerContainer {
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     opacity: 0;
     z-index: 1;
     transition: all 0.6s ease-in-out;
